# my-py-examples

./: .gitignore  LICENSE  README.md
cc-module-demo/: CMakeLists.txt  CMakePresets.json  README.md
cc-module-demo/module/: math.ixx
cc-module-demo/src/: main.cpp
cc-server-demo/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cc-server-demo/include/: json_ctrl.h  test_ctrl.h  user_ctrl.h
cc-server-demo/src/: json_ctrl.cc  main.cc  test_ctrl.cc  user_ctrl.cc
py-celery-demo/: .gitignore  README.md  db.py  docker-compose.yaml  dto.py  handler.py  main.py  model.py  pyproject.toml  pytest.ini  tasks.py
py-stock-api/: .gitignore  README.md  main.py  pyproject.toml
py-stock-api/constant/: adjust_flag.py  frequency.py  trade_status.py  year_type.py
py-stock-api/dto/: __init__.py  req_adjust_factor.py  req_balance_data.py  req_cash_flow_data.py  req_deposit_rate_data.py  req_dividend_data.py  req_dupont_data.py  req_forecast_report.py  req_growth_data.py  req_k_history.py  req_loan_rate_data.py  req_money_supply_data_month.py  req_money_supply_data_year.py  req_operation_data.py  req_performance_express_report.py  req_profit_data.py  req_required_reserve_ratio_data.py  req_stock_basic.py
py-stock-api/entity/: __init__.py  adjust_factor.py  balance_data.py  cash_flow_data.py  deposit_rate_data.py  dividend_data.py  dupont_data.py  forecast_report.py  growth_data.py  hs300_stock.py  k_daily.py  k_minute.py  k_week_month.py  loan_rate_data.py  money_supply_data_month.py  money_supply_data_year.py  operation_data.py  performance_express_report.py  profit_data.py  required_reserve_ratio_data.py  stock_basic.py  stock_industry.py  sz50_stock.py  validators.py  zz500_stock.py
py-stock-api/handler/: __init__.py  adjust_factor.py  balance_data.py  cash_flow_data.py  deposit_rate_data.py  dividend_data.py  dupont_data.py  forecast_report.py  growth_data.py  hs300_stock.py  k_history.py  loan_rate_data.py  money_supply_data_month.py  money_supply_data_year.py  operation_data.py  performance_express_report.py  profit_data.py  required_reserve_ratio_data.py  stock_basic.py  stock_industry.py  sz50_stock.py  zz500_stock.py
py-stock-api/service/: __init__.py  adjust_factor.py  balance_data.py  cash_flow_data.py  deposit_rate_data.py  dividend_data.py  dupont_data.py  forecast_report.py  growth_data.py  hs300_stock.py  k_history.py  loan_rate_data.py  money_supply_data_month.py  money_supply_data_year.py  operation_data.py  performance_express_report.py  profit_data.py  required_reserve_ratio_data.py  stock_basic.py  stock_industry.py  sz50_stock.py  zz500_stock.py
py-stock-api/test/: test_adjust_factor_service.py  test_balance_data_service.py  test_cash_flow_data_service.py  test_deposit_rate_data.py  test_dividend_data_service.py  test_dupont_data_service.py  test_entity.py  test_forecast_report_service.py  test_growth_data_service.py  test_hs300_stock_service.py  test_k_history_service.py  test_loan_rate_data.py  (+11 more)
(+2 files in other folders)
